tests/errors/macro/parser_need_ident/macro_with_slash.c
#macro /
#endm

int main()
{
	return 0;
}
